changing the description text about Diana as an artist

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
  		<meta name="description" content="">
-  		<meta name="keywords" content="performing arts, director, artistic director, choreographer, dance, theatre, performance, creative technologies, actor, film, stage, screen, montage, hybrid, inter-disciplinary, multi-media, artist, writer, portfolio, work">
+  		<meta name="keywords" content="performance artist, transdisciplinary, artistic director, dance-theatre, artificial intelligence, emerging technologies, speculative, performing arts, director, choreographer, dance, theatre, performance, creative technologies, artist, transmedia, intermedia, experimental, innovative, stage, screen, montage, hybrid, interdisciplinary, artist, creator, creative writing, speculative performance, speculative fiction">
 
 		<title>Diana Neranti - Intermedia Dance-Theatre & Performance Art</title> 
 		<link rel="stylesheet" href="css/reset_style.css">
@@ -37,7 +37,13 @@
 						<p class="artist-name-splashpage">Diana Neranti</p>
 					</div>
 					<div class="artist-type-container-splashpage">
-						<p class="artist-type-splashpage"><span>Intermedia Performance Artist, Director & Actor</span></p>
+						<p class="artist-type-splashpage">
+							<span>Transdisciplinary Performance Artist & Artistic Director at
+								<a href="https://replica.institute/">
+								REPLICA Institute for Creative Anticipation and Performing Arts
+								</a>
+							</span>
+						</p>
 					</div>
 				</div>
 			</div>
