open replica link in a new tab

--- a/index.html
+++ b/index.html
@@ -38,10 +38,8 @@
 					</div>
 					<div class="artist-type-container-splashpage">
 						<p class="artist-type-splashpage">
-							<span>Transdisciplinary Performance Artist & \\ Artistic Director at
-								<a href="https://replica.berlin/">
-								REPLICA Institute for Creative Anticipation and Performing Arts
-								</a>
+							<span>Transdisciplinary Performance Artist & <br> Artistic Director at
+								<a href="https://replica.berlin/">REPLICA</a>
 							</span>
 						</p>
 					</div>
